--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
     "node": "=20.x"
   },
   "prisma": {
-    "seed": "yarn rw exec seed"
+    "seed": "yarn rw exec seed",
+    "schema": "api/db/schema.prisma"
   },
-  "packageManager": "yarn@4.6.0",
-  "resolutions": {
-    "@storybook/react-dom-shim@npm:7.6.20": "https://verdaccio.tobbe.dev/@storybook/react-dom-shim/-/react-dom-shim-8.0.8.tgz"
-  }
+  "packageManager": "yarn@4.6.0"
 }
