--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@fastify/middie": "^9.0.3",
     "@redwoodjs/api": "8.8.0",
-    "@redwoodjs/graphql-server": "8.8.0"
+    "@redwoodjs/graphql-server": "8.8.0",
+    "dataloader": "^2.2.3",
+    "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "@types/node": "^24.1.0"
   }
 }
