--- a/web/package.json
+++ b/web/package.json
@@ -11,11 +11,23 @@
     ]
   },
   "dependencies": {
+    "@base-ui-components/react": "^1.0.0-beta.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
     "@redwoodjs/forms": "8.8.0",
     "@redwoodjs/router": "8.8.0",
     "@redwoodjs/web": "8.8.0",
+    "@tiptap/react": "^3.0.9",
+    "formik": "^2.4.6",
+    "humanize-string": "2.1.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "socket.io-client": "^4.8.1",
+    "yup": "^1.7.0",
+    "zod": "^4.0.14",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@redwoodjs/vite": "8.8.0",
