--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -14,6 +14,7 @@
       "../.redwood/types/mirror/api/src"
     ],
     "paths": {
+      "@/": ["./src/"],
       "src/*": [
         "./src/*",
         "../.redwood/types/mirror/web/src/*",
