--- a/web/package.json
+++ b/web/package.json
@@ -23,15 +23,14 @@
     "@tiptap/extension-typography": "^3.0.9",
     "@tiptap/react": "^3.0.9",
     "@tiptap/starter-kit": "^3.0.9",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "humanize-string": "2.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "socket.io-client": "^4.8.1",
     "tiptap-markdown": "^0.8.10",
-    "yup": "^1.7.0",
-    "zod": "^4.0.14",
-    "zustand": "^5.0.7"
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@redwoodjs/vite": "8.8.0",
