--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "devDependencies": {
     "@redwoodjs/core": "8.8.0",
-    "@redwoodjs/project-config": "8.8.0"
+    "@redwoodjs/project-config": "8.8.0",
+    "@redwoodjs/cli": "8.8.0"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
